--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,8 +19,13 @@
   "homepage": "https://github.com/RukisonGuzman/EXPRESSPELICULAS#readme",
   "dependencies": {
     "axios": "0.26.0",
+    "bcrypt": "5.0.1",
     "cors": "2.8.5",
     "express": "4.17.2",
-    "nodemon": "2.0.15"
+    "morgan": "1.10.0",
+    "mysql2": "2.3.3",
+    "nodemon": "2.0.15",
+    "sequelize": "6.16.1",
+    "winston": "3.6.0"
   }
 }
